--- a/dsrep.ipynb
+++ b/dsrep.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 638,
+   "execution_count": 672,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 639,
+   "execution_count": 673,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 640,
+   "execution_count": 674,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 641,
+   "execution_count": 675,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 642,
+   "execution_count": 676,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 643,
+   "execution_count": 677,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 644,
+   "execution_count": 678,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 645,
+   "execution_count": 679,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 646,
+   "execution_count": 680,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 647,
+   "execution_count": 681,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 648,
+   "execution_count": 682,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 649,
+   "execution_count": 683,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 650,
+   "execution_count": 684,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 651,
+   "execution_count": 685,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 652,
+   "execution_count": 686,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 653,
+   "execution_count": 687,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 654,
+   "execution_count": 688,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 655,
+   "execution_count": 689,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 656,
+   "execution_count": 690,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 657,
+   "execution_count": 691,
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 658,
+   "execution_count": 692,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 659,
+   "execution_count": 693,
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 660,
+   "execution_count": 694,
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 661,
+   "execution_count": 695,
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 662,
+   "execution_count": 696,
    "metadata": {},
    "outputs": [
     {
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 663,
+   "execution_count": 697,
    "metadata": {},
    "outputs": [
     {
@@ -1348,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 664,
+   "execution_count": 698,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1364,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 665,
+   "execution_count": 699,
    "metadata": {},
    "outputs": [
     {
@@ -1710,7 +1710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 666,
+   "execution_count": 700,
    "metadata": {},
    "outputs": [
     {
@@ -2960,7 +2960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 667,
+   "execution_count": 701,
    "metadata": {},
    "outputs": [
     {
@@ -3257,7 +3257,8 @@
     "the test set:<br>\n",
     "- Heart rate of moderate activities are greater than heart rate of light activities.<br>\n",
     "- Heart rate of intense activities are greater than heart rate of light activities.<br>\n",
-    "- Chest acceleration along z axis is greater than that along x axis during lying."
+    "- Chest acceleration along z axis is greater than that along x axis during lying.<br>\n",
+    "- Chest acceleration along x axis is greater than that along z axis during running."
    ]
   },
   {
@@ -3280,7 +3281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 668,
+   "execution_count": 702,
    "metadata": {},
    "outputs": [
     {
@@ -3308,7 +3309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 669,
+   "execution_count": 703,
    "metadata": {},
    "outputs": [
     {
@@ -3335,7 +3336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 670,
+   "execution_count": 704,
    "metadata": {},
    "outputs": [
     {
@@ -3364,7 +3365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 671,
+   "execution_count": 705,
    "metadata": {},
    "outputs": [
     {
@@ -3379,6 +3380,45 @@
     "test_l = test[test.activity_name=='lying']\n",
     "feature1='chest_3D_acceleration_16_z'\n",
     "feature2='chest_3D_acceleration_16_x'\n",
+    "test1 = test_l[feature1]\n",
+    "test2 = test_l[feature2]\n",
+    "print(ranksums(test1,test2,alternative='greater'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since we get a p-value of 0 which is lower than 0.05 we reject the null hypothesis and accept<br>\n",
+    "the alternate hypothesis. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hypothesis 4<br>\n",
+    "$H_0$(Null) : The x axis chest acceleration during running is lower or same as the z axis acceleration. <br>\n",
+    "$H_1$(Alternate) :The x axis chest acceleration during lying is higher than the z axis acceleration. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 706,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RanksumsResult(statistic=128.5744769319503, pvalue=0.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_l = test[test.activity_name=='running']\n",
+    "feature1='chest_3D_acceleration_16_x'\n",
+    "feature2='chest_3D_acceleration_16_z'\n",
     "test1 = test_l[feature1]\n",
     "test2 = test_l[feature2]\n",
     "print(ranksums(test1,test2,alternative='greater'))"
