Modularized model prediction part but still some errors remaining

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,18 +34,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "260424b7c64a49da8ac70167747aa346",
+       "model_id": "4c81c860e8ce4cb58743350ebaf104cd",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "MitoWidget(analysis_data_json='{\"analysisName\": \"UUID-9d7e3d16-39cf-49ab-8c03-1cfcbb7d4774\", \"code\": {\"imports…"
+       "MitoWidget(analysis_data_json='{\"analysisName\": \"UUID-1aa31724-fc90-4831-a9f0-ccffca335c5d\", \"code\": {\"imports…"
       ]
      },
      "metadata": {},
@@ -94,7 +94,10 @@
     "clean_data_pivot = pivot_table.reset_index()\n",
     "\n",
     "# Drop duplicates in clean_data_pivot\n",
-    "clean_data_pivot = clean_data_pivot.drop_duplicates(keep='first')\n"
+    "clean_data_pivot = clean_data_pivot.drop_duplicates(keep='first')\n",
+    "\n",
+    "# Added column new-column-kws4 to clean_data\n",
+    "clean_data.insert(0, 'new-column-kws4', 0)\n"
    ]
   }
  ],
